<resources>
    <string name="app_name">MyWeather</string>
    <string name="MyWeather">MyWeather</string>
    <string name="WhichLocation">Which location?</string>
    <string name="EnterCity">Enter the city here </string>
    <string name="EnterState">Enter the state here </string>
    <string name="EnterCountry">Enter the country here</string>
    <string name="Save">Save</string>
    <string name="Design">Design</string>
    <string name="Num">"0"</string>
    <string name="weatherIcon">weatherIcon</string>
    <string name="condition">Condition</string>
    <string name="maxminpahumid">MaxMin</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="aqi">AQI</string>
    <string name="lowMediumAqi">Enjoy your usual outdoor activities. </string>
    <string name="highAqi">Anyone experiencing discomfort such as sore eyes, cough or sore throat should consider reducing activity, particularly outdoors. </string>
    <string name="veryHighAqi">Reduce physical exertion, particularly outdoors, especially if you experience symptoms such as cough or sore throat.</string>
    <string name="fiveDayForecast">Five Day Forecast</string>
    <string name="cityTransition">City</string>
    <string name="citynotfound">City/State not found! Do not use short forms, recheck the spelling and try again.</string>
    <string name="logoFABTransition">Logo</string>
    <string name="buttonTransition">buttonTransition</string>
    <string name="Wind">Wind</string>
    <string name="windDirection">Direction</string>
    <string name="windSpeed">Speed</string>
    <string name="Visibility">Visibility</string>
    <string name="tryAgain">\? (Try again)</string>
    <string name="cardTransition">cardTransition</string>
    <string name="noida">Noida</string>
    <string name="uttar_pradesh">Uttar Pradesh</string>
    <string name="india">India</string>
    <string name="chartHeading">Five days weather</string>
    <string name="day">Monday</string>
    <string name="networkError">Network error!</string>
    <string name="slide">&lt;------------------- Swipe -------------------&gt;</string>
    <string name="changeCity">Change city</string>
    <string name="refreshWeather">Refresh</string>
</resources>
