<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/Linear_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/Linear_top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ImageRectTop"
                android:contentDescription="@string/Design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear_middle"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/logoFAB"
                    android:transitionName="@string/logoFABTransition"
                    android:src="@drawable/logo"
                    app:fabCustomSize="48sp"
                    app:borderWidth="0sp"
                    app:maxImageSize="36sp"
                    app:elevation="5sp"
                    android:scaleType="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"/>

                <TextView
                    android:id="@+id/TextViewAppName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:text="@string/MyWeather"
                    android:padding="10sp"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/WhichLocation"
                android:layout_marginStart="50sp"
                android:padding="10sp"
                android:transitionName="@string/cityTransition"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="5sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:hint="@string/EnterCity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingStart="20sp"
                    android:paddingTop="15sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="15sp"
                    android:textSize="15sp"
                    android:background="@drawable/cornered_edittext_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="15sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:hint="@string/EnterState">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextState"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingStart="20sp"
                    android:paddingTop="15sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="15sp"
                    android:textSize="15sp"
                    android:background="@drawable/cornered_edittext_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorHint="@color/colorPrimary"
                android:layout_marginTop="15sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:hint="@string/EnterCountry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EditTextCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingStart="20sp"
                    android:paddingTop="15sp"
                    android:paddingEnd="15sp"
                    android:paddingBottom="15sp"
                    android:textSize="15sp"
                    android:background="@drawable/cornered_edittext_white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ButtonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:layout_marginTop="40sp"
                android:layout_marginStart="50sp"
                android:layout_marginEnd="50sp"
                android:text="@string/Save"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/cornered_button_red"
                android:transitionName="@string/buttonTransition"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear_bottom"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">
            <ImageView
                android:id="@+id/ImageRectBottom"
                android:contentDescription="@string/Design"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/rectangle2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>