<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".Dashboard">

    <RelativeLayout
        android:id="@+id/dashboard_relativeParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_dashboardRect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:contentDescription="@string/Design"
            android:src="@drawable/dashboard_rect"/>

        <ImageView
            android:id="@+id/weatherIconImageView"
            android:contentDescription="@string/weatherIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/thunderstorm"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30sp"
            android:paddingStart="2sp"
            android:paddingEnd="10sp"
            android:paddingTop="5sp"/>

        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Num"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@color/white"
            android:layout_alignTop="@+id/weatherIconImageView"
            android:layout_marginTop="0sp"
            android:layout_toEndOf="@+id/weatherIconImageView"
            android:paddingStart="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="20sp"/>

        <ImageView
            android:id="@+id/image_degree"
            android:contentDescription="@string/Design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/degree"
            android:layout_toEndOf="@+id/temperatureTextView"
            android:layout_alignTop="@+id/temperatureTextView"/>

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WhichLocation"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_alignTop="@+id/temperatureTextView"
            android:layout_alignStart="@+id/temperatureTextView"
            android:paddingStart="15sp"
            android:paddingEnd="10sp"
            android:paddingTop="60sp"
            android:transitionName="@string/cityTransition"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settingFAB"
            android:transitionName="@string/logoFABTransition"
            android:src="@drawable/logo"
            app:maxImageSize="48dp"
            app:borderWidth="0sp"
            app:elevation="5sp"
            android:scaleType="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="25sp"
            android:layout_below="@id/cityTextView"/>

        <Button
            android:id="@+id/buttonRefresh"
            android:text="@string/refreshWeather"
            android:layout_alignTop="@+id/settingFAB"
            android:layout_toEndOf="@+id/settingFAB"
            android:background="@drawable/cornered_button_white"
            android:elevation="5sp"
            android:padding="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/buttonChangeCity"
            android:text="@string/changeCity"
            android:layout_below="@+id/buttonRefresh"
            android:layout_alignStart="@+id/buttonRefresh"
            android:background="@drawable/cornered_button_white"
            android:elevation="5sp"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/dashboard_ll_h0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/settingFAB"
            android:layout_marginTop="20sp">
            <androidx.cardview.widget.CardView
                android:id="@+id/dashboard_cardView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="5sp"
                android:transitionName="@string/cardTransition">
                <LinearLayout
                    android:id="@+id/dashboard_ll_v1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/dashboard_ll_h1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/weatherCondition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimary"
                            android:text="@string/condition"
                            android:padding="5sp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/dashboard_ll_h2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:id="@+id/dashboard_ll_Inside1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginEnd="5sp"
                            android:layout_weight="0.5">

                            <TextView
                                android:id="@+id/maxTempTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/maxminpahumid"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                            <TextView
                                android:id="@+id/minTempTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/maxminpahumid"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/dashboard_ll_Inside2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:layout_marginStart="5sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/pressureTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pressure"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

                            <TextView
                                android:id="@+id/humidityTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dashboard_ll_h3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/windTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Wind"
                            android:textColor="@color/colorPrimary"
                            android:textStyle="bold"
                            android:gravity="start"
                            android:padding="5sp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dashboard_ll_h4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:layout_gravity="center">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.2">
                            <TextView
                                android:id="@+id/windSpeedTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/windSpeed"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.8">
                            <TextView
                                android:id="@+id/windDirectionTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/windDirection"
                                android:textColor="@color/lightBlue"
                                android:textStyle="bold"
                                android:gravity="start"
                                android:padding="5sp"
                                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/dashboard_ll_h5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/visibilityTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Visibility"
                            android:textColor="@color/lightBlue"
                            android:textStyle="bold"
                            android:gravity="start"
                            android:padding="5sp"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <TextView
            android:id="@+id/aqiTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dashboard_ll_h0"
            android:text="@string/aqi"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_margin="20sp"/>

        <TextView
            android:id="@+id/adviceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aqiTextView"
            android:text="@string/aqi"
            android:textColor="@color/lightBlue"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:gravity="center"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/adviceTextView"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="40sp"
            android:gravity="center">
            <Button
                android:id="@+id/fiveDayForecastBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fiveDayForecast"
                android:padding="10sp"
                android:textSize="20sp"
                android:background="@drawable/cornered_button_red"
                android:textColor="@color/white"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:transitionName="@string/buttonTransition"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>