<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.vaibhav.myweather.Forecast">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Design"
            android:gravity="center"
            android:layout_alignParentTop="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold"
            android:layout_margin="20sp"
            android:textColor="@color/colorAccent"
            android:transitionName="@string/cityTransition"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/cityTextView"/>

        <TextView
            android:id="@+id/swipeHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/lightBlue"
            android:text="@string/slide"
            android:textStyle="normal"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_margin="1sp"
            android:layout_below="@id/recyclerView"/>

        <LinearLayout
            android:id="@+id/forecast_ll_h0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/cityTextView">

            <!--Actual card view is in layout_carditem.xml this one is only
            for transition animation. After that its visibility is set to GONE
            and recyclerView inflates layout_carditem-->
            <androidx.cardview.widget.CardView
                android:id="@+id/forecast_cardView"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:orientation="vertical"
                android:layout_margin="20sp"
                app:cardCornerRadius="20sp"
                app:cardElevation="5sp"
                android:transitionName="@string/cardTransition">

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:id="@+id/chartHeadingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/chartHeading"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_margin="5sp"
            android:padding="10sp"
            android:layout_below="@+id/swipeHint"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/weatherChart"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_margin="15sp"
            android:layout_below="@+id/chartHeadingTextView"/>

    </RelativeLayout>
</ScrollView>
